refactored SVGs and navbar

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <!-- Javascript -->
   <script defer src="/app/js/hover.js"></script>
 
-  <title>Digital Shovelito</title>
+  <title>Digital Shovel - Home</title>
 </head>
 
 <body>
@@ -47,13 +47,12 @@
           <li class="dropdown__title">Products
             <svg class="dropdown__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
               xmlns="http://www.w3.org/2000/svg">
-              <path d="M2.5 1L7.95455 6L2.5 11" stroke="var(--blue-900)" stroke-width="2" stroke-linecap="round"
-                stroke-linejoin="round" />
+              <path d="M2.5 1L7.95455 6L2.5 11" />
             </svg>
           </li>
           <ul class="dropdown__menu">
-            <a href="products-minipod.html">
-              <li class="dropdown__link">
+            <li>
+              <a class="dropdown__link" href="products-minipod.html">
                 <img src="images/icons/icon_minipod.svg" alt="Minipod Icon">
                 <div class="dropdown__text">
                   <h5>Minipod Container
@@ -67,10 +66,10 @@
                   </h5>
                   <small>Plug and play crypto mining containers</small>
                 </div>
-              </li>
-            </a>
-            <a href="#">
-              <li class="dropdown__link">
+              </a>
+            </li>
+            <li>
+              <a class="dropdown__link" href="#">
                 <img src="images/icons/icon_power-supply.svg" alt="Minipod Icon">
                 <div class="dropdown__text">
                   <h5>Power Supply
@@ -84,14 +83,14 @@
                   </h5>
                   <small>Highest efficiency and savings on the market</small>
                 </div>
-              </li>
-            </a>
+              </a>
+            </li>
           </ul>
         </ul>
-        <li class="navbar__link">Team</li>
-        <li class="navbar__link">Merch</li>
-        <li class="navbar__link">Faq</li>
-        <li class="navbar__link">Contact Us</li>
+        <li><a class="navbar__link" href="team.html">Team</a></li>
+        <li><a class="navbar__link" href="merch.html">Merch</a></li>
+        <li><a class="navbar__link" href="faq.html">Faq</a></li>
+        <li><a class="navbar__link" href="contact.html">Contact Us</a></li>
       </ul>
 
       <a class="btn btn__navbar btn--primary" href="">Login
@@ -106,8 +105,8 @@
 
       <a class="navbar__hamburger" href="">
         <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path d="M18 9H4" stroke="var(--cool-gray-400)" stroke-width="2" stroke-linecap="round" />
-          <path d="M18 13H4" stroke="var(--cool-gray-400)" stroke-width="2" stroke-linecap="round" />
+          <path d="M18 9H4"/>
+          <path d="M18 13H4"/>
         </svg>
       </a>
     </nav>
@@ -126,22 +125,18 @@
           offering.
         </p>
         <div class="flex gap--sm">
-          <a class="btn btn--primary" href="#">Products
+          <a class="btn btn--primary" href="products-minipod.html">Products
             <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
               xmlns="http://www.w3.org/2000/svg">
-              <path d="M7.49 6L7.5 6" stroke="var(--blue-100)" stroke-width="2" stroke-linecap="round"
-                stroke-linejoin="round" />
-              <path d="M2.5 1L7.95455 6L2.5 11" stroke="var(--blue-100)" stroke-width="2" stroke-linecap="round"
-                stroke-linejoin="round" />
+              <path d="M7.49 6L7.5 6" />
+              <path d="M2.5 1L7.95455 6L2.5 11" />
             </svg>
           </a>
-          <a class="btn btn--tertiary" href="#">Contact Sales
+          <a class="btn btn--tertiary" href="contact.html">Contact Sales
             <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
               xmlns="http://www.w3.org/2000/svg">
-              <path d="M7.49 6L7.5 6" stroke="var(--blue-900)" stroke-width="2" stroke-linecap="round"
-                stroke-linejoin="round" />
-              <path d="M2.5 1L7.95455 6L2.5 11" stroke="var(--blue-900)" stroke-width="2" stroke-linecap="round"
-                stroke-linejoin="round" />
+              <path d="M7.49 6L7.5 6" />
+              <path d="M2.5 1L7.95455 6L2.5 11" />
             </svg>
           </a>
         </div>
@@ -436,12 +431,10 @@
                 Unit (SPDU)
               </span> that comes along with it. The SPDU and its user interface give you the power to control numerous
               configurations to customize your Minipod and miners.</p>
-            <a href="#" class="btn btn--primary">Products <svg class="btn__chevron" width="13" height="12"
+            <a href="products-minipod.html" class="btn btn--primary btn--white">Products <svg class="btn__chevron" width="13" height="12"
                 viewBox="0 0 13 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M7.49 6L7.5 6" stroke="var(--blue-100)" stroke-width="2" stroke-linecap="round"
-                  stroke-linejoin="round" />
-                <path d="M2.5 1L7.95455 6L2.5 11" stroke="var(--blue-100)" stroke-width="2" stroke-linecap="round"
-                  stroke-linejoin="round" />
+                <path d="M7.49 6L7.5 6" />
+                <path d="M2.5 1L7.95455 6L2.5 11" />
               </svg></a>
           </div>
         </div>
@@ -461,13 +454,12 @@
                 data</span> for you to monitor every event that
               occurs. Determine the time period you want to analyze and never miss anything.
             </p>
-            <a href="#" class="btn btn--primary">Products <svg class="btn__chevron" width="13" height="12"
+            <a href="products-minipod.html" class="btn btn--primary">Products <svg class="btn__chevron" width="13" height="12"
                 viewBox="0 0 13 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M7.49 6L7.5 6" stroke="var(--blue-100)" stroke-width="2" stroke-linecap="round"
-                  stroke-linejoin="round" />
-                <path d="M2.5 1L7.95455 6L2.5 11" stroke="var(--blue-100)" stroke-width="2" stroke-linecap="round"
-                  stroke-linejoin="round" />
-              </svg></a>
+                <path d="M7.49 6L7.5 6" />
+                <path d="M2.5 1L7.95455 6L2.5 11" />
+              </svg>
+            </a>
           </div>
           <img class="app__mockup app__mockup--right" src="images/illustrations/app-monitor.png" alt="">
         </div>
@@ -486,13 +478,12 @@
               that occurs with your Minipod and your miners. <span class="text--emphasis text--light-blue">Receive
                 simple and clear emails</span> when such events happen.
             </p>
-            <a href="#" class="btn btn--primary">Products <svg class="btn__chevron" width="13" height="12"
+            <a href="products-minipod.html" class="btn btn--primary btn--white">Products <svg class="btn__chevron" width="13" height="12"
                 viewBox="0 0 13 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M7.49 6L7.5 6" stroke="var(--blue-100)" stroke-width="2" stroke-linecap="round"
-                  stroke-linejoin="round" />
-                <path d="M2.5 1L7.95455 6L2.5 11" stroke="var(--blue-100)" stroke-width="2" stroke-linecap="round"
-                  stroke-linejoin="round" />
-              </svg></a>
+                <path d="M7.49 6L7.5 6" />
+                <path d="M2.5 1L7.95455 6L2.5 11" />
+              </svg>
+            </a>
           </div>
         </div>
       </article>
@@ -503,7 +494,8 @@
       <div class="container">
         <h6 class="testimonials__subheading">Customer Testimonials</h6>
         <div class="flex gap--md ai-b mtop--md">
-          <svg class="testimonials__icon" width="88" height="81" viewBox="0 0 88 81" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <svg class="testimonials__icon" width="88" height="81" viewBox="0 0 88 81" fill="none"
+            xmlns="http://www.w3.org/2000/svg">
             <g class="testimonials__chat-bubble">
               <path fill-rule="evenodd" clip-rule="evenodd"
                 d="M33.0207 0.523521C30.1603 0.523521 27.8414 2.84236 27.8414 5.7028L27.8414 16.0614C27.8414 18.9218 30.1603 21.2407 33.0207 21.2407L53.7379 21.2407C56.5983 21.2407 58.9171 18.9218 58.9171 16.0614V5.70281C58.9171 2.84237 56.5983 0.523521 53.7379 0.523521L33.0207 0.523521ZM48.5587 21.2408H39.9265L42.9163 24.8286C43.6065 25.6568 44.8786 25.6568 45.5689 24.8286L48.5587 21.2408Z"
@@ -728,13 +720,11 @@
           </h6>
           <h1 class="income__heading">PLUG & PLAY<br><span class="income__passive">PASSIVE INCOME</span></h1>
         </div>
-        <a href="#" onmouseenter="plugIn()" onmouseleave="plugOut()" class="income__btn btn btn--primary">Get Started
+        <a href="products-minipod.html" onmouseenter="plugIn()" onmouseleave="plugOut()" class="income__btn btn btn--primary">Get Started
           <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
             xmlns="http://www.w3.org/2000/svg">
-            <path d="M7.49 6L7.5 6" stroke="var(--blue-100)" stroke-width="2" stroke-linecap="round"
-              stroke-linejoin="round" />
-            <path d="M2.5 1L7.95455 6L2.5 11" stroke="var(--blue-100)" stroke-width="2" stroke-linecap="round"
-              stroke-linejoin="round" />
+            <path d="M7.49 6L7.5 6"/>
+            <path d="M2.5 1L7.95455 6L2.5 11"/>
           </svg>
         </a>
       </div>
