--- a/products-minipod.html
+++ b/products-minipod.html
@@ -21,7 +21,7 @@
   <!-- Javascript -->
   <script defer src="/app/js/hover.js"></script>
 
-  <title>Digital Shovelito</title>
+  <title>Digital Shovel - Minipod</title>
 </head>
 
 <body>
@@ -743,13 +743,11 @@
           </table>
         </div>
 
-        <a href="#" class="btn btn--primary btn--as-c mtop--xxl">More Info
+        <a href="#" class="btn btn--primary btn--as-c btn--white mtop--xxl">Place Order
           <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
             xmlns="http://www.w3.org/2000/svg">
-            <path d="M7.49 6L7.5 6" stroke="var(--blue-100)" stroke-width="2" stroke-linecap="round"
-              stroke-linejoin="round" />
-            <path d="M2.5 1L7.95455 6L2.5 11" stroke="var(--blue-100)" stroke-width="2" stroke-linecap="round"
-              stroke-linejoin="round" />
+            <path d="M7.49 6L7.5 6"/>
+            <path d="M2.5 1L7.95455 6L2.5 11"/>
           </svg>
         </a>
       </div>
