added team page and timeline component

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       </a>
     </nav>
 
-    <section class="hero">
+    <section class="hero flex">
       <div class="hero__text flex flex-col gap--lg">
         <a href="#" class="hero__event">
           <small>26-28 July</small><small>•</small><small class="text--emphasis">Mining Disrupt
@@ -120,7 +120,7 @@
         <h1 class="hero__heading">
           Revolutionary <emphasis>crypto mining</emphasis> containers
         </h1>
-        <p class="hero__body">
+        <p class="hero__body hero__body--home">
           Discover our continued innovation, competitive pricing, and what really sets us apart by exploring our
           offering.
         </p>
@@ -347,7 +347,7 @@
 
   </header>
 
-  <main class="main">
+  <main class="main main__home">
 
     <section class="btc">
       <div class="container flex flex-col gap--sm">
