--- a/team.html
+++ b/team.html
@@ -112,11 +112,187 @@
       </a>
     </nav>
 
+    <section class="hero flex jc-sb">
+      <div class="hero__text flex flex-col gap--lg">
+        <h1>
+          Meet Our <emphasis class="text--blue">Team</emphasis>
+        </h1>
+        <div class="flex flex-col gap--sm">
+          <h3>The people behind the scenes</h3>
+          <p class="hero__body hero__body--team">
+            We take pride in the group of individuals we bring together, forming talented teams, and achieving the goals we strive for.
+          </p>
+        </div>
+      </div>
+
+      <div class="hero__img">
+        <img src="images/illustrations/team-puzzle.svg" alt="Team Puzzle Illustration">
+      </div>
+    </section>
+
   </header>
 
   <main class="main">
 
-    <h1 class="text--center mbot--xxl">Under Construction</h1>
+    <section class="team container flex jc-sb">
+
+      <div class="col-1 flex flex-col gap--xlg">
+        <h5>Corporate</h5>
+
+        <ul class="team__list flex flex-col gap--md">
+          <li class="team__list-member flex gap--sm">
+            <img src="images/photos/team/scot.png" alt="Headshot Photograph of Scot Johnson">
+            <div class="flex flex-col jc-c">
+              <h6>Scot Johnson</h6>
+              <small>CEO & President</small>
+              <small class="text--blue fadeIn">Enjoys luxury cars and golfing</small>
+            </div>
+          </li>
+
+          <li class="team__list-member flex gap--sm">
+            <img src="images/photos/team/scot.png" alt="Headshot Photograph of Scot Johnson">
+            <div class="flex flex-col jc-c">
+              <h6>Scot Johnson</h6>
+              <small>CEO & President</small>
+              <small class="text--blue fadeIn">Enjoys luxury cars and golfing</small>
+            </div>
+          </li>
+
+          <li class="team__list-member flex gap--sm">
+            <img src="images/photos/team/scot.png" alt="Headshot Photograph of Scot Johnson">
+            <div class="flex flex-col jc-c">
+              <h6>Scot Johnson</h6>
+              <small>CEO & President</small>
+              <small class="text--blue fadeIn">Enjoys luxury cars and golfing</small>
+            </div>
+          </li>
+
+          <li class="team__list-member flex gap--sm">
+            <img src="images/photos/team/scot.png" alt="Headshot Photograph of Scot Johnson">
+            <div class="flex flex-col jc-c">
+              <h6>Scot Johnson</h6>
+              <small>CEO & President</small>
+              <small class="text--blue fadeIn">Enjoys luxury cars and golfing</small>
+            </div>
+          </li>
+
+          <li class="team__list-member flex gap--sm">
+            <img src="images/photos/team/scot.png" alt="Headshot Photograph of Scot Johnson">
+            <div class="flex flex-col jc-c">
+              <h6>Scot Johnson</h6>
+              <small>CEO & President</small>
+              <small class="text--blue fadeIn">Enjoys luxury cars and golfing</small>
+            </div>
+          </li>
+        </ul>
+
+      </div>
+
+      <div class="col-1 flex flex-col gap--xlg">
+        <h5>Corporate</h5>
+
+        <ul class="team__list flex flex-col gap--md">
+          <li class="team__list-member flex gap--sm">
+            <img src="images/photos/team/scot.png" alt="Headshot Photograph of Scot Johnson">
+            <div class="flex flex-col jc-c">
+              <h6>Scot Johnson</h6>
+              <small>CEO & President</small>
+              <small class="text--blue fadeIn">Enjoys luxury cars and golfing</small>
+            </div>
+          </li>
+
+          <li class="team__list-member flex gap--sm">
+            <img src="images/photos/team/scot.png" alt="Headshot Photograph of Scot Johnson">
+            <div class="flex flex-col jc-c">
+              <h6>Scot Johnson</h6>
+              <small>CEO & President</small>
+              <small class="text--blue fadeIn">Enjoys luxury cars and golfing</small>
+            </div>
+          </li>
+
+          <li class="team__list-member flex gap--sm">
+            <img src="images/photos/team/scot.png" alt="Headshot Photograph of Scot Johnson">
+            <div class="flex flex-col jc-c">
+              <h6>Scot Johnson</h6>
+              <small>CEO & President</small>
+              <small class="text--blue fadeIn">Enjoys luxury cars and golfing</small>
+            </div>
+          </li>
+
+          <li class="team__list-member flex gap--sm">
+            <img src="images/photos/team/scot.png" alt="Headshot Photograph of Scot Johnson">
+            <div class="flex flex-col jc-c">
+              <h6>Scot Johnson</h6>
+              <small>CEO & President</small>
+              <small class="text--blue fadeIn">Enjoys luxury cars and golfing</small>
+            </div>
+          </li>
+
+          <li class="team__list-member flex gap--sm">
+            <img src="images/photos/team/scot.png" alt="Headshot Photograph of Scot Johnson">
+            <div class="flex flex-col jc-c">
+              <h6>Scot Johnson</h6>
+              <small>CEO & President</small>
+              <small class="text--blue fadeIn">Enjoys luxury cars and golfing</small>
+            </div>
+          </li>
+        </ul>
+
+      </div>
+
+      <div class="col-1 flex flex-col gap--xlg">
+        <h5>Corporate</h5>
+
+        <ul class="team__list flex flex-col gap--md">
+          <li class="team__list-member flex gap--sm">
+            <img src="images/photos/team/scot.png" alt="Headshot Photograph of Scot Johnson">
+            <div class="flex flex-col jc-c">
+              <h6>Scot Johnson</h6>
+              <small>CEO & President</small>
+              <small class="text--blue fadeIn">Enjoys luxury cars and golfing</small>
+            </div>
+          </li>
+
+          <li class="team__list-member flex gap--sm">
+            <img src="images/photos/team/scot.png" alt="Headshot Photograph of Scot Johnson">
+            <div class="flex flex-col jc-c">
+              <h6>Scot Johnson</h6>
+              <small>CEO & President</small>
+              <small class="text--blue fadeIn">Enjoys luxury cars and golfing</small>
+            </div>
+          </li>
+
+          <li class="team__list-member flex gap--sm">
+            <img src="images/photos/team/scot.png" alt="Headshot Photograph of Scot Johnson">
+            <div class="flex flex-col jc-c">
+              <h6>Scot Johnson</h6>
+              <small>CEO & President</small>
+              <small class="text--blue fadeIn">Enjoys luxury cars and golfing</small>
+            </div>
+          </li>
+
+          <li class="team__list-member flex gap--sm">
+            <img src="images/photos/team/scot.png" alt="Headshot Photograph of Scot Johnson">
+            <div class="flex flex-col jc-c">
+              <h6>Scot Johnson</h6>
+              <small>CEO & President</small>
+              <small class="text--blue fadeIn">Enjoys luxury cars and golfing</small>
+            </div>
+          </li>
+
+          <li class="team__list-member flex gap--sm">
+            <img src="images/photos/team/scot.png" alt="Headshot Photograph of Scot Johnson">
+            <div class="flex flex-col jc-c">
+              <h6>Scot Johnson</h6>
+              <small>CEO & President</small>
+              <small class="text--blue fadeIn">Enjoys luxury cars and golfing</small>
+            </div>
+          </li>
+        </ul>
+
+      </div>
+      
+    </section>
 
   </main>
 
