--- a/products-minipod.html
+++ b/products-minipod.html
@@ -47,13 +47,12 @@
           <li class="dropdown__title">Products
             <svg class="dropdown__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
               xmlns="http://www.w3.org/2000/svg">
-              <path d="M2.5 1L7.95455 6L2.5 11" stroke="var(--blue-900)" stroke-width="2" stroke-linecap="round"
-                stroke-linejoin="round" />
+              <path d="M2.5 1L7.95455 6L2.5 11" />
             </svg>
           </li>
           <ul class="dropdown__menu">
-            <a href="minipod.html">
-              <li class="dropdown__link">
+            <li>
+              <a class="dropdown__link" href="products-minipod.html">
                 <img src="images/icons/icon_minipod.svg" alt="Minipod Icon">
                 <div class="dropdown__text">
                   <h5>Minipod Container
@@ -67,13 +66,13 @@
                   </h5>
                   <small>Plug and play crypto mining containers</small>
                 </div>
-              </li>
-            </a>
-            <a href="#">
-              <li class="dropdown__link">
+              </a>
+            </li>
+            <li>
+              <a class="dropdown__link" href="#">
                 <img src="images/icons/icon_power-supply.svg" alt="Minipod Icon">
                 <div class="dropdown__text">
-                  <h5>Power Suppy
+                  <h5>Power Supply
                     <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
                       xmlns="http://www.w3.org/2000/svg">
                       <path d="M7.49 6L7.5 6" stroke="var(--blue-900)" stroke-width="2" stroke-linecap="round"
@@ -84,14 +83,14 @@
                   </h5>
                   <small>Highest efficiency and savings on the market</small>
                 </div>
-              </li>
-            </a>
+              </a>
+            </li>
           </ul>
         </ul>
-        <li class="navbar__link">Team</li>
-        <li class="navbar__link">Merch</li>
-        <li class="navbar__link">Faq</li>
-        <li class="navbar__link">Contact Us</li>
+        <li><a class="navbar__link" href="team.html">Team</a></li>
+        <li><a class="navbar__link" href="merch.html">Merch</a></li>
+        <li><a class="navbar__link" href="faq.html">Faq</a></li>
+        <li><a class="navbar__link" href="contact.html">Contact Us</a></li>
       </ul>
 
       <a class="btn btn__navbar btn--primary" href="">Login
@@ -106,13 +105,13 @@
 
       <a class="navbar__hamburger" href="">
         <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path d="M18 9H4" stroke="var(--cool-gray-400)" stroke-width="2" stroke-linecap="round" />
-          <path d="M18 13H4" stroke="var(--cool-gray-400)" stroke-width="2" stroke-linecap="round" />
+          <path d="M18 9H4"/>
+          <path d="M18 13H4"/>
         </svg>
       </a>
     </nav>
 
-    <section class="hero flex-col ai-c">
+    <section class="hero flex flex-col ai-c">
 
       <div class="hero__text hero__text--product flex flex-col ai-c">
         <h4>Featured Product</h4>
@@ -304,7 +303,7 @@
 
   </header>
 
-  <main class="main">
+  <main class="main main__minipod">
 
     <section class="features">
       <div class="feature-1 flex flex-col gap--md">
