added merch and team pages

--- a/merch.html
+++ b/merch.html
@@ -21,7 +21,7 @@
   <!-- Javascript -->
   <script defer src="/app/js/hover.js"></script>
 
-  <title>Digital Shovel - Merch</title>
+  <title>Digital Shovel - Team</title>
 </head>
 
 <body>
@@ -112,11 +112,126 @@
       </a>
     </nav>
 
+    <section class="hero flex jc-sb">
+      <div class="hero__text flex flex-col gap--lg">
+        <h1>
+          Digital Shovel <emphasis class="text--blue">Merch</emphasis>
+        </h1>
+        <div class="flex flex-col gap--sm">
+          <h3>Enjoy our designs in everyday items</h3>
+          <p class="hero__body hero__body--team">
+            From shirts to weed grinders, from lanyards to beer coasters, we got a myriad of choices for you to select
+            from.
+          </p>
+        </div>
+      </div>
+
+      <div class="hero__img">
+        <img src="images/illustrations/merch.svg" alt="Merch Screen Illustration">
+      </div>
+    </section>
+
   </header>
 
   <main class="main">
 
-    <h1 class="text--center mbot--xxl">Under Construction</h1>
+    <section class="merch container">
+
+      <ul class="merch__grid">
+
+        <li class="merch__grid-item">
+          <div class="merch__grid-item-img">
+            <img src="images/photos/merch/weed-grinder.jpg" alt="Digital Shovel Weed Grinder">
+          </div>
+          <div class="merch__grid-item-content flex flex-col gap--md">
+            <div class="flex jc-sb">
+              <h5>Weed Grinder</h5>
+              <h6>$25</h6>
+            </div>
+            <p>This is a long description for a merchandise product that we will be selling. It will include information
+              and details regarding its features and specifications.</p>
+            <a href="#" class="btn btn--paypal"></a>
+          </div>
+        </li>
+
+        <li class="merch__grid-item">
+          <div class="merch__grid-item-img">
+            <img src="images/photos/merch/weed-grinder.jpg" alt="Digital Shovel Weed Grinder">
+          </div>
+          <div class="merch__grid-item-content flex flex-col gap--md">
+            <div class="flex jc-sb">
+              <h5>Weed Grinder</h5>
+              <h6>$25</h6>
+            </div>
+            <p>This is a long description for a merchandise product that we will be selling. It will include information
+              and details regarding its features and specifications.</p>
+            <a href="#" class="btn btn--paypal"></a>
+          </div>
+        </li>
+
+        <li class="merch__grid-item">
+          <div class="merch__grid-item-img">
+            <img src="images/photos/merch/weed-grinder.jpg" alt="Digital Shovel Weed Grinder">
+          </div>
+          <div class="merch__grid-item-content flex flex-col gap--md">
+            <div class="flex jc-sb">
+              <h5>Weed Grinder</h5>
+              <h6>$25</h6>
+            </div>
+            <p>This is a long description for a merchandise product that we will be selling. It will include information
+              and details regarding its features and specifications.</p>
+            <a href="#" class="btn btn--paypal"></a>
+          </div>
+        </li>
+
+        <li class="merch__grid-item">
+          <div class="merch__grid-item-img">
+            <img src="images/photos/merch/weed-grinder.jpg" alt="Digital Shovel Weed Grinder">
+          </div>
+          <div class="merch__grid-item-content flex flex-col gap--md">
+            <div class="flex jc-sb">
+              <h5>Weed Grinder</h5>
+              <h6>$25</h6>
+            </div>
+            <p>This is a long description for a merchandise product that we will be selling. It will include information
+              and details regarding its features and specifications.</p>
+            <a href="#" class="btn btn--paypal"></a>
+          </div>
+        </li>
+
+        <li class="merch__grid-item">
+          <div class="merch__grid-item-img">
+            <img src="images/photos/merch/weed-grinder.jpg" alt="Digital Shovel Weed Grinder">
+          </div>
+          <div class="merch__grid-item-content flex flex-col gap--md">
+            <div class="flex jc-sb">
+              <h5>Weed Grinder</h5>
+              <h6>$25</h6>
+            </div>
+            <p>This is a long description for a merchandise product that we will be selling. It will include information
+              and details regarding its features and specifications.</p>
+            <a href="#" class="btn btn--paypal"></a>
+          </div>
+        </li>
+
+        <li class="merch__grid-item">
+          <div class="merch__grid-item-img">
+            <img src="images/photos/merch/weed-grinder.jpg" alt="Digital Shovel Weed Grinder">
+          </div>
+          <div class="merch__grid-item-content flex flex-col gap--md">
+            <div class="flex jc-sb">
+              <h5>Weed Grinder</h5>
+              <h6>$25</h6>
+            </div>
+            <p>This is a long description for a merchandise product that we will be selling. It will include information
+              and details regarding its features and specifications.</p>
+            <a href="#" class="btn btn--paypal"></a>
+          </div>
+        </li>
+
+        <ul/>
+
+    </section>
 
   </main>
 
