added faq functionality

--- a/faq.html
+++ b/faq.html
@@ -149,8 +149,8 @@
         <ul class="faq__question">
           <li class="faq__question-title">
             <svg width="12" height="5" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M11.787.595v3.81H0V.595h11.787Z" fill="#307FE2"/>
-              <path class="collapse-icon" d="M11.788.595v3.81H0V.595h11.787Z" fill="#307FE2"/>
+              <path d="M11.787.595v3.81H0V.595h11.787Z" fill="var(--primary-color)"/>
+              <path class="collapse-icon" d="M11.788.595v3.81H0V.595h11.787Z" fill="var(--primary-color)"/>
             </svg>
             How long has Digital Shovel been around?
           </li>
@@ -163,8 +163,8 @@
         <ul class="faq__question">
           <li class="faq__question-title">
             <svg width="12" height="5" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M11.787.595v3.81H0V.595h11.787Z" fill="#307FE2"/>
-              <path class="collapse-icon" d="M11.788.595v3.81H0V.595h11.787Z" fill="#307FE2"/>
+              <path d="M11.787.595v3.81H0V.595h11.787Z" fill="var(--primary-color)"/>
+              <path class="collapse-icon" d="M11.788.595v3.81H0V.595h11.787Z" fill="var(--primary-color)"/>
             </svg>
             How long has Digital Shovel been around?
           </li>
@@ -176,8 +176,8 @@
         <ul class="faq__question">
           <li class="faq__question-title">
             <svg width="12" height="5" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M11.787.595v3.81H0V.595h11.787Z" fill="#307FE2"/>
-              <path class="collapse-icon" d="M11.788.595v3.81H0V.595h11.787Z" fill="#307FE2"/>
+              <path d="M11.787.595v3.81H0V.595h11.787Z" fill="var(--primary-color)"/>
+              <path class="collapse-icon" d="M11.788.595v3.81H0V.595h11.787Z" fill="var(--primary-color)"/>
             </svg>
             How long has Digital Shovel been around?
           </li>
