added contact page, file restructure & rename

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     rel="stylesheet">
 
   <!-- Javascript -->
-  <script defer src="/app/js/hover.js"></script>
+  <script defer src="/app/js/home.js"></script>
 
   <title>Digital Shovel - Home</title>
 </head>
