--- a/contact.html
+++ b/contact.html
@@ -18,9 +18,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
 
-  <!-- Javascript -->
-  <script defer src="/app/js/hover.js"></script>
-
   <title>Digital Shovel - Contact Us</title>
 </head>
 
@@ -112,11 +109,66 @@
       </a>
     </nav>
 
+    <section class="hero flex jc-sb">
+      <div class="hero__text flex flex-col gap--lg">
+        <h1>
+          Contact <emphasis class="text--blue">Sales</emphasis>
+        </h1>
+        <div class="flex flex-col gap--sm">
+          <h3>Have a chat with our experts</h3>
+          <p class="hero__body hero__body--team">
+            Our sales team will guide you through your options based on your current and future investment goals.
+          </p>
+        </div>
+      </div>
+
+      <div class="hero__img">
+        <img src="images/illustrations/contact-chat-bubbles.svg" alt="Chat Bubble Icons">
+      </div>
+    </section>
+
   </header>
 
-  <main class="main">
+  <main class="main container">
 
-    <h1 class="text--center mbot--xxl">Under Construction</h1>
+    <form action="">
+      <div class="fieldset flex flex-col">
+        <label for="text-input">First Name</label>
+        <input type="text" id="text-input" name="text-input" placeholder="John">
+      </div>
+      <div class="fieldset flex flex-col">
+        <label for="text-input">Last Name</label>
+        <input type="text" id="text-input" name="text-input" placeholder="Doe">
+      </div>
+      <div class="fieldset flex flex-col">
+        <label for="text-input">Email</label>
+        <input type="text" id="text-input" name="text-input" placeholder="johndoe@example.com">
+      </div>
+      <div class="fieldset flex flex-col">
+        <label for="text-input">Phone</label>
+        <input type="text" id="text-input" name="text-input" placeholder="+5 (555) 555 5555">
+      </div>
+      <div class="fieldset flex flex-col">
+        <label for="text-input">Company</label>
+        <input type="text" id="text-input" name="text-input" placeholder="Digital Shovel">
+      </div>
+      <div class="fieldset flex flex-col">
+        <label for="number-input">Country</label>
+        <select id="dropdown-input" name="dropdown-input">
+          <option value="">Canada</option>
+          <option value="">USA</option>
+        </select>
+      </div>
+      <button class="btn btn--primary btn--form" type="submit">Send
+        <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
+          xmlns="http://www.w3.org/2000/svg">
+          <path d="M7.49 6L7.5 6" stroke="var(--blue-100)" stroke-width="2" stroke-linecap="round"
+            stroke-linejoin="round" />
+          <path d="M2.5 1L7.95455 6L2.5 11" stroke="var(--blue-100)" stroke-width="2" stroke-linecap="round"
+            stroke-linejoin="round" />
+        </svg>
+      </button>
+    </form>
 
   </main>
 
