--- a/products-minipod.html
+++ b/products-minipod.html
@@ -18,6 +18,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
 
+  <!-- Javascript -->
+  <script defer src="/app/js/home.js"></script>
+
   <title>Digital Shovel - Minipod</title>
 </head>
 
@@ -102,8 +105,8 @@
 
       <a class="navbar__hamburger" href="">
         <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path d="M18 9H4"/>
-          <path d="M18 13H4"/>
+          <path d="M18 9H4" />
+          <path d="M18 13H4" />
         </svg>
       </a>
     </nav>
@@ -118,8 +121,6 @@
 
       <div class="hero__minipod-container">
         <div class="hero__minipod">
-          <button class="rotateBtn" id="turnLeft"></button>
-          <button class="rotateBtn" id="turnRight"></button>
           <div class="cameraRotate_left">
             <div class="cameraRotate_right">
               <div class="base">
@@ -293,6 +294,13 @@
               </div>
             </div>
           </div>
+          <button class="btn__pause">
+            <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <circle cx="11" cy="11" r="9" fill="var(--blue-200)" />
+              <path class="" fill-rule="evenodd" clip-rule="evenodd" d="M10 7H7V15H10V7ZM15 7H12V15H15V7Z"
+                fill="var(--primary-color)" />
+            </svg>
+          </button>
         </div>
       </div>
 
@@ -549,7 +557,9 @@
               </tr>
               <tr class="table__row">
                 <th class="table__subheading">
-                  <span class="table__tooltip">For competitive integrity reasons we have kept the names of our competitors' products anonymous.</span>Model</th>
+                  <span class="table__tooltip">For competitive integrity reasons we have kept the names of our
+                    competitors' products anonymous.</span>Model
+                </th>
                 <td>
                   <h6 class="table__heading-img">M300 Minipod</h6>
                   <img src="images/illustrations/minipod-front.svg" alt="">
@@ -576,7 +586,9 @@
               </tr>
               <tr class="table__row">
                 <th class="table__subheading">
-                  <span class="table__tooltip">The cost of the unit without any addons/extras or miners, only the cost of the actual Minipod/container.</span>Unit Cost</th>
+                  <span class="table__tooltip">The cost of the unit without any addons/extras or miners, only the cost
+                    of the actual Minipod/container.</span>Unit Cost
+                </th>
                 <td class="text--emphasis">$39,999 - 45,500</td>
                 <td class="text--emphasis">$110,000</td>
                 <td class="text--emphasis">Upon Request</td>
@@ -588,7 +600,9 @@
               </tr>
               <tr class="table__row">
                 <th class="table__subheading">
-                  <span class="table__tooltip">Remotely access your Minipod from anywhere in the world through any electronic device with internet.</span>Remote Access</th>
+                  <span class="table__tooltip">Remotely access your Minipod from anywhere in the world through any
+                    electronic device with internet.</span>Remote Access
+                </th>
                 <td class="table__checkmark"></td>
                 <td class="table__x-mark"></td>
                 <td class="table__x-mark"></td>
@@ -597,7 +611,10 @@
               </tr>
               <tr class="table__row">
                 <th class="table__subheading">
-                  <span class="table__tooltip">The Smart Power Distribution Unit (SPDU), exclusively produced by Digital Shovel, provides the power to remotely connect to Minipods, take full control of configurations, and monitor current and past events.</span>Smart Power Distribution Unit</th>
+                  <span class="table__tooltip">The Smart Power Distribution Unit (SPDU), exclusively produced by Digital
+                    Shovel, provides the power to remotely connect to Minipods, take full control of configurations, and
+                    monitor current and past events.</span>Smart Power Distribution Unit
+                </th>
                 <td class="table__checkmark"></td>
                 <td class="table__x-mark"></td>
                 <td class="table__x-mark"></td>
@@ -606,8 +623,11 @@
               </tr>
               <tr class="table__row">
                 <th class="table__subheading">
-                  <span class="table__tooltip">Minipods are bundled with a software application where our clients can login and through a simple and clean user interface they are given extensive control and monitoring of their miners.</span>Online Miner
-                  Management App</th>
+                  <span class="table__tooltip">Minipods are bundled with a software application where our clients can
+                    login and through a simple and clean user interface they are given extensive control and monitoring
+                    of their miners.</span>Online Miner
+                  Management App
+                </th>
                 <td class="table__checkmark"></td>
                 <td class="table__x-mark"></td>
                 <td class="table__x-mark"></td>
@@ -616,7 +636,9 @@
               </tr>
               <tr class="table__row">
                 <th class="table__subheading">
-                  <span class="table__tooltip">4 x 15,000 CFM fans operating at various stages and each shelf is fitted with a CNC cut hot aisle containment barrier, improving laminar flow.</span>Cooling System</th>
+                  <span class="table__tooltip">4 x 15,000 CFM fans operating at various stages and each shelf is fitted
+                    with a CNC cut hot aisle containment barrier, improving laminar flow.</span>Cooling System
+                </th>
                 <td class="table__checkmark"></td>
                 <td>Sold Separately</td>
                 <td class="table__checkmark"></td>
@@ -626,7 +648,8 @@
               <tr class="table__row">
                 <th class="table__subheading">
                   <span class="table__tooltip">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto unde
-                  voluptates, doloribus consequatur, sit sapiente quo temporibus placeat.</span>Temperature Sensor</th>
+                    voluptates, doloribus consequatur, sit sapiente quo temporibus placeat.</span>Temperature Sensor
+                </th>
                 <td class="table__checkmark"></td>
                 <td class="table__x-mark"></td>
                 <td class="table__x-mark"></td>
@@ -635,7 +658,9 @@
               </tr>
               <tr class="table__row">
                 <th class="table__subheading">
-                  <span class="table__tooltip">The switch gear comes bundled with a set of 4 Minipods and above, and it allows for significantly higher safety against high current circuit breakers.</span>Switch Gear</th>
+                  <span class="table__tooltip">The switch gear comes bundled with a set of 4 Minipods and above, and it
+                    allows for significantly higher safety against high current circuit breakers.</span>Switch Gear
+                </th>
                 <td class="table__checkmark"></td>
                 <td class="table__x-mark"></td>
                 <td class="table__x-mark"></td>
@@ -644,7 +669,9 @@
               </tr>
               <tr class="table__row">
                 <th class="table__subheading">
-                  <span class="table__tooltip">The maximum number of miners that can be placed in the Minipod/container.</span>Miner Capacity</th>
+                  <span class="table__tooltip">The maximum number of miners that can be placed in the
+                    Minipod/container.</span>Miner Capacity
+                </th>
                 <td>96 miners</td>
                 <td>210 miners</td>
                 <td>340 miners</td>
@@ -653,7 +680,9 @@
               </tr>
               <tr class="table__row">
                 <th class="table__subheading">
-                  <span class="table__tooltip">The maximum number of power that the Minipod/container can reach.</span>Power Capacity</th>
+                  <span class="table__tooltip">The maximum number of power that the Minipod/container can
+                    reach.</span>Power Capacity
+                </th>
                 <td>300kW</td>
                 <td>1050kW</td>
                 <td>1400kW</td>
@@ -662,7 +691,9 @@
               </tr>
               <tr class="table__row">
                 <th class="table__subheading">
-                  <span class="table__tooltip">The weight of the Minipod/container without any miners inside.</span>Weight</th>
+                  <span class="table__tooltip">The weight of the Minipod/container without any miners
+                    inside.</span>Weight
+                </th>
                 <td>3,770 lbs or 1,710 kg </td>
                 <td>17,637 lbs or 8,000 kg </td>
                 <td>9,920 lbs or 4,500 kg </td>
@@ -671,7 +702,9 @@
               </tr>
               <tr class="table__row">
                 <th class="table__subheading">
-                  <span class="table__tooltip">The final size of the Minipod/container as you will receive it.</span>Size (L x W x H)</th>
+                  <span class="table__tooltip">The final size of the Minipod/container as you will receive
+                    it.</span>Size (L x W x H)
+                </th>
                 <td>7.3' x 13.1' x 8.4'</td>
                 <td>20' x 8' x 9.5'</td>
                 <td>40' x 7' x 8.1'</td>
@@ -680,7 +713,9 @@
               </tr>
               <tr class="table__row">
                 <th class="table__subheading">
-                  <span class="table__tooltip">The ability of the Minipod/container to be lifted by only a Forklift.</span>Movable by Forklift</th>
+                  <span class="table__tooltip">The ability of the Minipod/container to be lifted by only a
+                    Forklift.</span>Movable by Forklift
+                </th>
                 <td class="table__checkmark"></td>
                 <td class="table__x-mark"></td>
                 <td class="table__x-mark"></td>
@@ -689,7 +724,10 @@
               </tr>
               <tr class="table__row">
                 <th class="table__subheading">
-                  <span class="table__tooltip">A design principle that combines small components into modules that all together form the final product. Also, allows customizability, upgradability, and better maintainance.</span>Modular Design</th>
+                  <span class="table__tooltip">A design principle that combines small components into modules that all
+                    together form the final product. Also, allows customizability, upgradability, and better
+                    maintainance.</span>Modular Design
+                </th>
                 <td class="table__checkmark"></td>
                 <td class="table__x-mark"></td>
                 <td class="table__x-mark"></td>
@@ -698,7 +736,10 @@
               </tr>
               <tr class="table__row">
                 <th class="table__subheading">
-                  <span class="table__tooltip">In addition to the standard mechanical door lock, each unit can be upgraded to have a magnetic door lock, as well as exterior and internal IR smart cameras.</span>Enhanced Security</th>
+                  <span class="table__tooltip">In addition to the standard mechanical door lock, each unit can be
+                    upgraded to have a magnetic door lock, as well as exterior and internal IR smart
+                    cameras.</span>Enhanced Security
+                </th>
                 <td>Sold Separately</td>
                 <td class="table__x-mark"></td>
                 <td class="table__x-mark"></td>
@@ -707,7 +748,10 @@
               </tr>
               <tr class="table__row">
                 <th class="table__subheading">
-                  <span class="table__tooltip">The Minipod can be customized into sets of 3, 4, 6, and 8 units for clients that are aiming for higher capacities. On top of that, numerous addons and upgrades can be included.</span>Customizability</th>
+                  <span class="table__tooltip">The Minipod can be customized into sets of 3, 4, 6, and 8 units for
+                    clients that are aiming for higher capacities. On top of that, numerous addons and upgrades can be
+                    included.</span>Customizability
+                </th>
                 <td>High</td>
                 <td>Medium</td>
                 <td>Low</td>
@@ -716,7 +760,9 @@
               </tr>
               <tr class="table__row">
                 <th class="table__subheading">
-                  <span class="table__tooltip">Setup the power supply and your Minipod/container is good to go.</span>Plug & Play</th>
+                  <span class="table__tooltip">Setup the power supply and your Minipod/container is good to
+                    go.</span>Plug & Play
+                </th>
                 <td class="table__checkmark"></td>
                 <td class="table__x-mark"></td>
                 <td class="table__x-mark"></td>
@@ -728,7 +774,9 @@
               </tr>
               <tr class="table__row">
                 <th class="table__subheading">
-                  <span class="table__tooltip">Login to the Minipod/container software application, add your email, and receive notifications about the status of your Minipod and miners.</span>Email Notifications</th>
+                  <span class="table__tooltip">Login to the Minipod/container software application, add your email, and
+                    receive notifications about the status of your Minipod and miners.</span>Email Notifications
+                </th>
                 <td class="table__checkmark"></td>
                 <td class="table__x-mark"></td>
                 <td class="table__x-mark"></td>
@@ -742,8 +790,8 @@
         <a href="#" class="btn btn--primary btn--as-c btn--white mtop--xxl">Place Order
           <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
             xmlns="http://www.w3.org/2000/svg">
-            <path d="M7.49 6L7.5 6"/>
-            <path d="M2.5 1L7.95455 6L2.5 11"/>
+            <path d="M7.49 6L7.5 6" />
+            <path d="M2.5 1L7.95455 6L2.5 11" />
           </svg>
         </a>
       </div>
