--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="Digital Shovel helps businesses scale Crypto-Mining operations with turn-key mobile units. With low energy cost, and high security, we help businesses with managed and unmanaged miner hosting.">
 
   <!-- Custom CSS -->
   <link rel="stylesheet" href="dist/style.css">
@@ -348,9 +349,10 @@
 
         <button class="btn__pause">
           <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <circle cx="11" cy="11" r="9" fill="var(--blue-200)"/>
-            <path class="" fill-rule="evenodd" clip-rule="evenodd" d="M10 7H7V15H10V7ZM15 7H12V15H15V7Z" fill="var(--primary-color)"/>
-            </svg>
+            <circle cx="11" cy="11" r="9" fill="var(--blue-200)" />
+            <path class="" fill-rule="evenodd" clip-rule="evenodd" d="M10 7H7V15H10V7ZM15 7H12V15H15V7Z"
+              fill="var(--primary-color)" />
+          </svg>
         </button>
 
       </div>
