fixed footer links and added login demo link

--- a/team.html
+++ b/team.html
@@ -92,7 +92,7 @@
         <li><a class="navbar__link" href="contact.html">Contact Us</a></li>
       </ul>
 
-      <a class="btn btn__navbar btn--primary" href="">Login
+      <a href="http://demo.shovel.digital/" target="_blank" class="btn btn__navbar btn--primary">Login
         <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
           xmlns="http://www.w3.org/2000/svg">
           <path d="M7.49 6L7.5 6" stroke="var(--blue-100)" stroke-width="2" stroke-linecap="round"
@@ -644,25 +644,24 @@
         <div class="footer__column">
           <small class="footer__heading">Products</small>
           <ul class="footer__list">
-            <a href="" class="footer__list-item">Pricing</a href="">
-            <a href="" class="footer__list-item">Minipod</a href="">
-            <a href="" class="footer__list-item">Power Supply</a href="">
+            <a href="products-minipod.html" class="footer__list-item">Minipod</a>
+            <a href="" class="footer__list-item">Power Supply</a>
           </ul>
         </div>
         <div class="footer__column">
-          <small class="footer__heading">Products</small>
+          <small class="footer__heading">Navigation</small>
           <ul class="footer__list">
-            <a href="" class="footer__list-item">Pricing</a href="">
-            <a href="" class="footer__list-item">Minipod</a href="">
-            <a href="" class="footer__list-item">Power Supply</a href="">
+            <a href="products-minipod.html" class="footer__list-item">Products</a>
+            <a href="team.html" class="footer__list-item">Team</a>
+            <a href="merch.html" class="footer__list-item">Merch</a>
+            <a href="faq.html" class="footer__list-item">Faq</a>
+            <a href="contact.html" class="footer__list-item">Contact</a>
           </ul>
         </div>
         <div class="footer__column">
-          <small class="footer__heading">Products</small>
+          <small class="footer__heading">Company</small>
           <ul class="footer__list">
-            <a href="" class="footer__list-item">Pricing</a href="">
-            <a href="" class="footer__list-item">Minipod</a href="">
-            <a href="" class="footer__list-item">Power Supply</a href="">
+            <a href="team.html" class="footer__list-item">Careers</a>
           </ul>
         </div>
       </div>
